test: 템플릿 조회 시 해시태그가 잘 조회되는지 검증